--- a/myst.yml
+++ b/myst.yml
@@ -8,6 +8,9 @@ project:
   # authors: []
   github: https://github.com/2i2c-org/demo-higgs-mass
   # To autogenerate a Table of Contents, run "jupyter book init --write-toc"
+  toc:
+    - file: main.md
+    - file: analysis.ipynb
 site:
   template: book-theme
   # options:
