--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,11 +34,14 @@ jobs:
         uses: actions/configure-pages@v3
       - uses: actions/setup-node@v4
         with:
-          node-version: 18.x
-      - name: Install Jupyter Book (via myst)
-        run: npm install -g jupyter-book
+          node-version: 22.x
+      - uses: actions/setup-python@v6
+        with:
+          python-version: '3.13' 
+          cache: 'pip' # caching pip dependencies
+      - run: pip install -r requirements.txt
       - name: Build HTML Assets
-        run: jupyter-book build --html
+        run: jupyter-book build --html --execute
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
